# yar

./: DESCRIPTION  NAMESPACE  pixi.toml
.github/workflows/: build.yml
R/: extendr-wrappers.R
src/: Makevars.in  Makevars.win.in  entrypoint.c
src/rust/: Cargo.toml  document.rs
src/rust/src/: array.rs  lib.rs  text.rs  transaction.rs  type_conversion.rs  utils.rs
tests/testthat/: test-array.R  test-doc.R  test-integration.R  test-text.R
tools/: config.R
