[package]
name = "yr"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"  # CRAN https://extendr.rs/user-guide/cran-msrv.html
publish = false

[lib]
crate-type = ["rlib", "staticlib"]
name = "yr"

[[bin]]
name = "document"
path = "document.rs"

[dependencies]
extendr-api = { version = "0.9.0", default-features = false, features = [
  "result_condition"
] }
stable_deref_trait = "1.2.1"
yoke = { version = "0.8.2", features = ["derive"] }
yrs = "0.25.0"

[dev-dependencies]
extendr-engine = "*"

[profile.release]
lto = true
codegen-units = 1
